# compiladores

./: README.md
Task01/: README.md  pyproject.toml
Task01/src/: task.py
Task01/src/files/: Calc.stk
Task01/src/utils/: misc.py
Task02/: README.md  pyproject.toml
Task02/src/: task.py
Task02/src/files/: Calc.stk
Task02/src/utils/: misc.py
Task03/: README.md  pyproject.toml
Task03/src/: task.py
Task03/src/files/: Calc.stk
Task03/src/utils/: misc.py
